--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,15 @@ background-color: var(--color-1);
 animation: colorChange 120s infinite alternate;
 }
 
+@media (max-width: 500px) {
+header {
+  padding-left: 2%;
+  padding-top: 1.5%;
+  background-color: var(--color-1);
+  animation: colorChange 120s infinite alternate;
+}
+}
+
 footer {
 position: fixed;
 bottom: 0%;
@@ -995,8 +1004,8 @@ z-index: 4;
   }
 
   .fan {
-    font-size: 1.2em;
-    line-height: 1.2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
     width: 60%;
     left: 20%;
     transition: 0.3s ease-in-out;
